Add quick for Sandisk Cruzer - from PR kern/46547